FIX | Added overflow hidden to prevent app overflow horizontally

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -10,7 +10,7 @@ html {
 
 .noscroll {
    position: fixed;
-   overflow-y: scroll;
+   overflow: hidden;
 }
 
 :root {
